Fixed e17 compiling issue, added quick install script

--- a/WebGUI/html/ConfigurationGUI_artdaq.html
+++ b/WebGUI/html/ConfigurationGUI_artdaq.html
@@ -4135,7 +4135,7 @@
 		
 			if(!_codeEditorAppId)
 			{
-				Debug.log("No active Code Editor Supervisor found. Can not open files without a Code Editor Supervisor. " + 
+				Debug.log("No active Code Editor Supervisor found. You can not open files without a Code Editor Supervisor. " + 
 						"Please edit the Context group to include a Code Editor Supervisor and relaunch ots.",
 						Debug.HIGH_PRIORITY);
 				return;
