--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -325,7 +325,8 @@
 					"Create a desktop icon"
 				];
 				var menuItemHandlers = [
-					"parent.loadPage(\""+fullPathToPage+"\")",
+					//"parent.loadPage(\""+fullPathToPage+"\")",
+					"parent.loadPhoebusPage(\""+fullPathToPage+"\")",
 					"parent.loadPageNewWindow(\""+fullPathToPage+"\")",
 					"parent.loadPageNewBrowserTab(\""+fullPathToPage+"\")",
 					"parent.createDesktopIcon(\""+fullPathToPage+"\")"
