--- a/WebGUI/html/widgets/label.html
+++ b/WebGUI/html/widgets/label.html
@@ -46,9 +46,12 @@
 
 			function getParameters()
 			{
-				parameters_["label"] = "";
-				parameters_["label_position"] = "left";
+				parameters_["class"] = "";
 				parameters_["border"] = "true";
+				parameters_["text"] = "";
+				parameters_["text_position"] = "left";
+				parameters_["font"] = "";
+				parameters_["foreground_color"] = "";
 				return parameters_;
 			}
 
@@ -56,14 +59,13 @@
 			{
 				parameters_ = attributes;
 				console.log(parameters_);
-				document.getElementById("display").innerHTML = parameters_["label"];
-
 				if (parameters_["border"]=="true")
 					document.getElementById("display").style.border = "1px solid #000";
 				else
 					document.getElementById("display").style.border = "";
 
-				document.getElementById("display").style.textAlign = parameters_["label_position"];
+				document.getElementById("display").innerHTML = parameters_["text"];
+			        document.getElementById("display").style.textAlign = parameters_["text_position"];
 			}
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity) {}
