table widget added in the SlowControlsDashboard

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -193,7 +193,8 @@
                 else
                 {
                 	Debug.log("Loading page from url");
-                	loadPage(parameterPageName);
+                	//loadPage(parameterPageName);
+                	loadPhoebusPage(parameterPageName);
                 }
 			} //end init()
 
