--- a/WebGUI/html/widgets/table.html
+++ b/WebGUI/html/widgets/table.html
@@ -53,7 +53,16 @@
 				tabledata = []
 				for (pv in widget.PVList)
 				{
-					var row = {id:i, pvName:pv, pvValue:"", pvStatus:"", pvSeverity:"", pvTime:""};
+					var row = {
+								  id:i
+								, pvName:pv
+								, pvValue:""
+								, pvStatus:""
+								, pvSeverity:""
+								, pvTime:""
+								, serviceHistory: [pv_settings_[pv]]
+							  };
+
 					tabledata.push(row);
 					i++;
 				}
@@ -87,80 +96,103 @@
 				//create Tabulator on DOM element "display"
 				table = new Tabulator("#display", {
 					height:"100%", // set height of table (in CSS or here), this enables the Virtual DOM and improves render speed dramatically (can be any valid css height value)
-				 	data:tabledata, //assign data to table
-				 	layout:"fitColumns", //fit columns to width of table (optional)
+					data:tabledata, //assign data to table
+					layout:"fitColumns", //fit columns to width of table (optional)
+					//layout:"fitDataFill",
+					responsiveLayout:"collapse",
+					dataTree:false,
+					tooltips:function(cell){
+						//cell - cell component
+						//function should return a string for the tooltip of false to hide the tooltip
+						var data = cell.getRow().getData();
+						if (pv_settings_[data.pvName] !== undefined){
+							var pv_settings =
+										  	  data.pvName + ":\n"
+										  	+ "Lower Warning Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Warning_Limit).toExponential(2) + "\n"
+										  	+ "Upper Warning Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Warning_Limit).toExponential(2) + "\n"
+										  	+ "Lower Alarm Limit: "   + Number.parseFloat(pv_settings_[data.pvName].Lower_Alarm_Limit).toExponential(2)   + "\n"
+										  	+ "Upper Alarm Limit: "   + Number.parseFloat(pv_settings_[data.pvName].Upper_Alarm_Limit).toExponential(2)   + "\n"
+										  	+ "Lower Control Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Control_Limit).toExponential(2) + "\n"
+										  	+ "Upper Control Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Control_Limit).toExponential(2) + "\n"
+										  	+ "Lower Display Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Display_Limit).toExponential(2) + "\n"
+										  	+ "Upper Display Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Display_Limit).toExponential(2) + "\n";
+							return pv_settings;
+						}
+						return false;
+					},
+
 					rowFormatter:function(row){
-        				//row - row component
-			        	var data = row.getData();
-    				},
+						//data: row.getData().serviceHistory;
+					},
+
 					columns:[ //Define Table Columns
-					 	{
+						{
 						 	  title:"PV Name"
-					 		, field:"pvName"
-					 		, width:50
-					 		, formatter: function(cell, formatterParams, onRendered){
-					 			//console.log("Alarm Status");console.log(cell);console.log(formatterParams);
-					 			return cell.getValue();
-					 		}
-					 	},
+							, field:"pvName"
+							, width:50
+							, formatter: function(cell, formatterParams, onRendered){
+								//console.log("Alarm Status");console.log(cell);console.log(formatterParams);
+								return cell.getValue();
+							}
+						},
 
 						{
-					 		  title:"value"
-					 		, field:"pvValue"
-					 		, align:"left"
-					 		, formatter:"progress"
+							  title:"value"
+							, field:"pvValue"
+							, align:"left"
+							, formatter:"progress"
 							, formatterParams: function(cell){
-					 			var data = cell.getRow().getData();
-					 			if (pv_settings_[data.pvName] !== undefined){
-					 				minL = pv_settings_[data.pvName].Lower_Warning_Limit;
+								var data = cell.getRow().getData();
+								if (pv_settings_[data.pvName] !== undefined){
+									minL = pv_settings_[data.pvName].Lower_Warning_Limit;
 									maxL = pv_settings_[data.pvName].Upper_Warning_Limit;
 									unit = pv_settings_[data.pvName].Units;
-			 					}
+								}
 			 					console.log("rowFormatter Data: " + data.pvName + " unit " + unit + " min " + minL + " max " + maxL);
-					 			return {
-					 				  legend: cell.getValue() + " " + unit
-					 				, min: minL
+								return {
+									  legend: cell.getValue() + " " + unit
+									, min: minL
 									, max: maxL
 									, color:["green", "green", "green", "red"]
 								}
 							}
-					 	},
+						},
 
 						{
-					 		  title:"Alarm Status"
-					 		, field:"pvStatus"
-					 		, formatter: function(cell, formatterParams, onRendered){
-					 			//console.log("Alarm Status");console.log(cell);console.log(formatterParams);
-					 			cell.getElement().style.color = (cell.getValue() !== "" && cell.getValue() !== "NO_ALARM") ? "red" : "green";
-					 			return "" + cell.getValue() + "";
-					 		}
+							  title:"Alarm Status"
+							, field:"pvStatus"
+							, formatter: function(cell, formatterParams, onRendered){
+								//console.log("Alarm Status");console.log(cell);console.log(formatterParams);
+								cell.getElement().style.color = (cell.getValue() !== "" && cell.getValue() !== "NO_ALARM") ? "red" : "green";
+								return "" + cell.getValue() + "";
+							}
 						},
 
 						{	  title:"Alarm Severity"
-					 		, field:"pvSeverity"
-					 		, formatter: function(cell, formatterParams, onRendered){
-					 			//console.log("Alarm Severity");console.log(cell);console.log(formatterParams);
-					 			cell.getElement().style.color = (cell.getValue() !== "" && cell.getValue() !== "NO_ALARM") ? "red" : "green";
-					 			return "" + cell.getValue() + "";
-					 		}
-					 	},
+							, field:"pvSeverity"
+							, formatter: function(cell, formatterParams, onRendered){
+								//console.log("Alarm Severity");console.log(cell);console.log(formatterParams);
+								cell.getElement().style.color = (cell.getValue() !== "" && cell.getValue() !== "NO_ALARM") ? "red" : "green";
+								return "" + cell.getValue() + "";
+							}
+						},
 
 						{	  title:"Last Update"
-					 		, field:"pvTime"
-					 		, formatter:"datetime"
-					 		, formatterParams:
-					 		{
+							, field:"pvTime"
+							, formatter:"datetime"
+							, formatterParams:
+							{
 //								  inputFormat:"YYYY-MM-DD hh:mm:ss"
 								  outputFormat:"MM/DD/YY hh:mm:ss"
 								, invalidPlaceholder:"(invalid date)"
 							}
-					 		, sorter:"date"
-					 		, align:"center"
-					 	}
+							, sorter:"date"
+							, align:"center"
+						}
 					],
-				 	rowClick:function(e, row){ //trigger an alert message when the row is clicked
-				 		console.log("Row " + row.getData().id + " Clicked!!!!");
-				 	},
+					rowClick:function(e, row){ //trigger an alert message when the row is clicked
+						console.log("Row " + row.getData().id + " Clicked!!!!");
+					},
 				});
 
 				console.log("newTable() reached");
