Improved printouts; yum install python devel for quick install; Case-insensitive table ordering.

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3699,6 +3699,8 @@
 					titleStr += "\n" + tableTitle;
 				if (depth > 0)
 					titleStr += "\nPath: \t\t" + path + nodeName + "\n";
+				titleStr += "\n\n" + "Expand children w/Hot-keys:   + , &gt; , } , A , E \n"+
+						"Collapse children w/Hot-keys: - , &lt; , { , Z , M \n";
 
 				treeViewHandlerStr_ += "<div class='treeNode-Value treeNode-Value-nonLeafNode " +
 					"treeNode-Value-nodeEditType-" + nodeEditType +
