Quick install script for standalone Code Editor

--- a/WebGUI/html/CodeEditor_standalone.html
+++ b/WebGUI/html/CodeEditor_standalone.html
@@ -26,6 +26,17 @@
 				CodeEditor.create(true /*standAlone*/);
 			}
 		</script>
+		
+		<!-- Note: usually this page is in frame and ots icon is shown by C++ -->
+		<!-- start ots icon handling -->
+		<link rel="shortcut icon" href="../images/otsdaqIcons/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="../images/otsdaqIcons/favicon.ico" type="image/x-icon">
+		<link rel="icon" type="image/png" sizes="32x32" href="../images/otsdaqIcons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="../images/otsdaqIcons/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="../images/otsdaqIcons/favicon-16x16.png">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="theme-color" content="#ffffff">
+		<!-- end ots icon handling -->
 	</head>
 
 
