--- a/WebGUI/html/widgets/table.html
+++ b/WebGUI/html/widgets/table.html
@@ -108,14 +108,14 @@
 						if (pv_settings_[data.pvName] !== undefined){
 							var pv_settings =
 										  	  data.pvName + ":\n"
-										  	+ "Lower Warning Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Warning_Limit).toExponential(2) + "\n"
-										  	+ "Upper Warning Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Warning_Limit).toExponential(2) + "\n"
-										  	+ "Lower Alarm Limit: "   + Number.parseFloat(pv_settings_[data.pvName].Lower_Alarm_Limit).toExponential(2)   + "\n"
-										  	+ "Upper Alarm Limit: "   + Number.parseFloat(pv_settings_[data.pvName].Upper_Alarm_Limit).toExponential(2)   + "\n"
-										  	+ "Lower Control Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Control_Limit).toExponential(2) + "\n"
-										  	+ "Upper Control Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Control_Limit).toExponential(2) + "\n"
-										  	+ "Lower Display Limit: " + Number.parseFloat(pv_settings_[data.pvName].Lower_Display_Limit).toExponential(2) + "\n"
-										  	+ "Upper Display Limit: " + Number.parseFloat(pv_settings_[data.pvName].Upper_Display_Limit).toExponential(2) + "\n";
+										  	+ "Lower Warning Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Lower_Warning_Limit).toExponential(2) + "\n"
+										  	+ "Upper Warning Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Upper_Warning_Limit).toExponential(2) + "\n"
+										  	+ "Lower Alarm Limit:\t\t"   + Number.parseFloat(pv_settings_[data.pvName].Lower_Alarm_Limit).toExponential(2)   + "\n"
+										  	+ "Upper Alarm Limit:\t\t"   + Number.parseFloat(pv_settings_[data.pvName].Upper_Alarm_Limit).toExponential(2)   + "\n"
+										  	+ "Lower Control Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Lower_Control_Limit).toExponential(2) + "\n"
+										  	+ "Upper Control Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Upper_Control_Limit).toExponential(2) + "\n"
+										  	+ "Lower Display Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Lower_Display_Limit).toExponential(2) + "\n"
+										  	+ "Upper Display Limit:\t" + Number.parseFloat(pv_settings_[data.pvName].Upper_Display_Limit).toExponential(2) + "\n";
 							return pv_settings;
 						}
 						return false;
